fix card spacing

--- a/writinging.com/css/style.css
+++ b/writinging.com/css/style.css
@@ -2205,6 +2205,9 @@ main>div>.container,
     left: 0;
     right: 0;
 }
+.profolio-wrap .card-body>.row [class*="col-"] {
+    margin-bottom: 15px;
+}
 
 @media (max-width:991px) {
     .profolio-wrap::before {
@@ -2231,11 +2234,6 @@ main>div>.container,
         -ms-flex-order: 2;
         order: 2;
     } */
-}
-@media (max-width:768px) {        
-    .file-group [class*="col-"]+[class*="col-"] {
-        margin-top: 15px;
-    }
 }
 
 /* functionbar */
